--- a/SubSandbox-3 - Randomness/sandbox2.css
+++ b/SubSandbox-3 - Randomness/sandbox2.css
@@ -1,7 +1,90 @@
-* {
-    box-sizing: initial;
-}
-
 html {
     font-family: 'Lato', sans-serif;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    padding: 3.125rem;
+    /* 50px */
+}
+
+.card1 {
+    width: 600px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.20);
+    display: flex;
+}
+
+.card__image-container {
+    flex: 1;
+    overflow: hidden;
+}
+
+.card__img {
+    min-height: 100%;
+}
+
+.card__content {
+    flex: 2;
+    padding: 5rem 2.5rem;
+    /* 80px, 40px; */
+}
+
+.card__title {
+    font-weight: 800;
+    color: #444;
+    font-size: 2.1875rem;
+    /* 35px; */
+}
+
+.card__subtitle {
+    font-size: 0.9375rem;
+    /* 15px; */
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: 0.0625;
+    /* 1px; */
+    color: limegreen;
+    margin-bottom: 3.125rem;
+    /* 50px; */
+}
+
+.card__description {
+    font-size: 0.875;
+    /* 14px; */
+    line-height: 1.6;
+    color: #555;
+    margin-bottom: 3.125rem;
+    /* 50px; */
+
+}
+
+.card__price {
+    font-size: 2.1875rem;
+    /* 35px; */
+    color: #444;
+    font-weight: 800;
+    margin-bottom: 1.5625rem;
+    /* 25px; */
+}
+
+.card__button {
+    display: inline-block;
+    background-color: limegreen;
+    color: black;
+    text-decoration: none;
+    padding: 0.8125rem 1.5625rem;
+    /* 13px 25px; */
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizelegibility;
+}
+
+.card__button:hover {
+    background: green;
+    color: white;
+    text-decoration: none;
 }
